@@ -13,6 +13,8 @@
  * Fix grammar and a typo in certificate renewal (#1072)
  * Use pushstate history for profile tabs (#1074)
  * Update to omni 2.6 (#1078)
+ * Renamed generated SSH keypair filename in omni bundle
+   if it would conflict with another file in the bundle. (#1063)
 
 == 2.16.7 ==
  * Update the LabWiki URL (#1073)
